# cbe-jezva

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Milestones.md  README.md  premake5.lua
cmake/: cbe_defines.cmake
example/BeanPong/: CMakeLists.txt  Makefile  build_linux.sh  build_mingw.sh  premake5.lua
example/BeanPong/assets/: assets.json
example/BeanPong/src/: C_BallLogic.cpp  C_BallLogic.hpp  C_PaddleAI.cpp  C_PaddleAI.hpp  C_PaddleMover.cpp  C_PaddleMover.hpp  C_PlayerController.cpp  C_PlayerController.hpp  GameManager.cpp  GameManager.hpp  main.cpp
include/: Animation.hpp  AssetManager.hpp  AudioManager.hpp  CB_Math.hpp  CB_SDL.h  CB_SDL_ttf.h  CoffeeBean.hpp  CoffeeBeanConfig.h  Component.hpp  Constants.h  Entity.hpp  EntityManager.hpp  FontManager.hpp  Game.hpp  InputManager.hpp  Logger.hpp  Macros.hpp  RandomNumberGenerator.hpp  TextureManager.hpp  Util.hpp
include/Audio/: Aud_OpenAL.hpp
include/Components/: AllDefaultComponents.hpp  C_Collider.hpp  C_RigidBody2D.hpp  C_SolidColour.hpp  C_Sprite.hpp  C_Text.hpp  C_Tile.hpp  C_Transform.hpp  SpriteComponent.hpp
include/Data/: Tilemap.hpp  Wave.hpp
include/Renderers/: CB_Renderer.hpp  Ren_SDL.hpp  Ren_Software.hpp
include/Types/: Colour.hpp  Vector2.hpp  Vertex2D.hpp
src/: Animation.cpp  AssetManager.cpp  AudioManager.cpp  Entity.cpp  EntityManager.cpp  FontManager.cpp  Game.cpp  InputManager.cpp  Logger.cpp  RandomNumberGenerator.cpp  SingleHeaderImplementations.cpp  TextureManager.cpp
src/Audio/: Aud_OpenAL.cpp
src/Components/: C_Collider.cpp  C_RigidBody2D.cpp  C_SolidColour.cpp  C_Text.cpp  C_Tile.cpp  C_Transform.cpp
src/Renderers/: Ren_SDL.cpp  Ren_Software.cpp
tools/: activate  make_component  make_component.lua  make_component.py
